# vertex-ai-embedding-test

./: README.md  pyproject.toml
src/: common.py  test_embedding.ipynb  test_rerank.ipynb
