[tool.poetry]
name = "vertex-ai-embedding-text"
version = "0.1.0"
description = ""
authors = ["adesso-philipp-schoneville <philipp.schoneville@adesso.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = "^1.42.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
xlsxwriter = "^3.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
